- Upgrade dialog to 1.3-20160424.
- Upgrade virtualbox-ose to 5.0.24.
- Upgrade nano to 2.6.1.
- Upgrade noVNC to 0.6.1.
- Upgrade zoneinfo to 2016f.
- Upgrade samba to 4.3.11.
- Upgrade jQuery to 3.1.0.
- Upgrade e2fsprogs to 1.43.1.
- Upgrade php to 7.0.9.
- Upgrade netatalk to 3.1.9.
- Upgrade virtualbox-ose to 5.0.26.
- Upgrade syncthing to 0.14.3.
- Upgrade lighttpd to 1.4.41.

Fixes:
- Fix prevent deletion of mounted gconcat softraid.
- Fix broken shadow copy.
- Fix for rsync over ssh (without deamon).
- Fix dataset did not always get destroyed on webgui if a share is in usage.
- Fix missing mimes (translation files) for File Manager (translating needed).
- Fix firewall rules cannot be moved into the preset rule area.
- Fix disable fw button not working under certain conditions.
- Fix importing ZFS datasets and ZFS volumes from different ZFS pools.
- Fix code format for Swedish file manager.
- Fix gettext protection against html code injections.
- Fix issue when reformatting disks.
- Fix a problem with gpt/labels.
- Fix Some HGST drive temperatures are not displayed.
- Fix download log files did not always work with some browsers.
- Fix some code errors on System|Advanced|Swap.
- Fix broken log files downloads.
- Fix test emails could not send as in French WebGUI.
- Fix timezone in file manager.

Permanent restrictions:
- It is not possible to use virtualbox-ose on 32-bits nas4free, 64-bits only feature.
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.
- iperf3 is not backwards compatible with iperf2.x. so you might also upgrade your client.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)